Fix scroll.
- Edit webkit scrollbar, to enable free flow of scrolls without interference

--- a/src/styles/components/Table.scss
+++ b/src/styles/components/Table.scss
@@ -292,6 +292,7 @@
 	text-decoration: none;
 	padding: 0;
 	font: inherit;
+	text-align: left;
 	transition: color 0.3s ease, text-decoration 0.3s ease;
 }
 
