--- a/src/styles/components/modals/FilterModal.scss
+++ b/src/styles/components/modals/FilterModal.scss
@@ -81,6 +81,7 @@
 			font-weight: 600;
 			line-height: normal;
 			width: 98px;
+			overflow: hidden;
 		}
 
 		.reset-button {
